# UseSoDemo

./: README.md  build.gradle  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/solarexsoft/usesodemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: UseSo.cpp  com_solarexsoft_ndkdemo_HelloNDK.h  com_solarexsoft_usesodemo_MainActivity.h
app/src/main/java/com/solarexsoft/usesodemo/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/solarexsoft/usesodemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
